[project]
name = "local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.35.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "scikit-image>=0.24.0",
]



#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"

#[tool.setuptools]
#py-modules = ['sdftoolbox']

#[tool.setuptools.package-data]
#sdftoolbox = ['sdftoolbox/*']